--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-# RFL-HRV1.0 - Unitary Fund Grant Proposal
-# Core quantum computing framework
+# Even better: Use newer stable version
+cat > requirements.txt << 'EOF'
+# RFL-HRV1.0 - Modern stable versions
 qiskit==1.0.2
-qiskit-aer==0.12.2
-
-# Scientific computing
+qiskit-aer==0.13.3  # Newer but still compatible with qiskit 1.0.2
 numpy==1.24.3
 scipy==1.10.1
-
-# Data visualization
 matplotlib==3.7.1
+EOF
+
+pip install -r requirements.txt
+python validation_demo.py
