--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-# Even better: Use newer stable version
-cat > requirements.txt << 'EOF'
-# RFL-HRV1.0 - Modern stable versions
-qiskit==1.0.2
-qiskit-aer==0.13.3  # Newer but still compatible with qiskit 1.0.2
-numpy==1.24.3
-scipy==1.10.1
-matplotlib==3.7.1
-EOF
+#paradigm shift requirements
 
-pip install -r requirements.txt
-python validation_demo.py
+numpy>=1.21.0
+scipy>=1.9.0
+qiskit>=0.44.0
+qiskit-aer>=0.12.0
+scikit-learn>=1.0.0
+pandas>=1.3.0
+matplotlib>=3.5.0
