--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-#paradigm shift requirements
+# RFL-HRV1.0 - Quantum System Pulse Detection Requirements
+# Pinned versions for maximum reproducibility
 
-numpy>=1.21.0
-scipy>=1.9.0
-qiskit>=0.44.0
-qiskit-aer>=0.12.0
-scikit-learn>=1.0.0
-pandas>=1.3.0
-matplotlib>=3.5.0
+qiskit==1.0.2
+qiskit-aer==0.13.3
+numpy==1.24.3
+scipy==1.10.1
+matplotlib==3.7.1
+scikit-learn==1.3.0
+pandas==2.0.3
